# os-custom

./: README.md
emulator/: Cargo.toml
emulator/templates/: android.yaml  blob.yaml  ca.key.pem  device.key  mmio.yaml  secure.yaml  server.pem
src/IA/: Cargo.toml  build.rs  mod.rs
src/IA/src/: lib.rs  main.rs
src/IA/src/ai/: ia_capture_api.rs  ia_capture_client.rs  mod.rs
src/IA/src/app/: init.rs
src/IA/src/capture_module/: ipc_server.rs
src/IA/src/engine/: orchestrator_client.rs
src/IA/src/engine/benches/: engine_benches.rs
src/IA/src/engine/ml/: cnn.rs  continual_learning.rs  data.rs  distributed_stub.rs  explainability.rs  metrics.rs  quantization.rs  training.rs  training_fewshot.rs  training_mali_driver.rs  training_neon_simd.rs  transformer.rs
src/IA/src/handlers/: mali_handlers.rs
src/IA/src/handlers/ipc/: contracts.rs  endpoints.rs  mod.rs  router.rs
src/IA/src/io/: buffer.rs  codec.rs  ipc_socket.rs  mod.rs
src/IA/src/loop/: loop_manager.rs  mod.rs  primary_loop.rs  secondary_loop.rs  utility_loop.rs
src/IA/src/ml/: cnn.rs  continual_learning.rs  data.rs  distributed_stub.rs  explainability.rs  facial_model.rs  fingerprint_model.rs  metrics.rs  mod.rs  quantization.rs  training.rs  training_fewshot.rs  training_mali_driver.rs  training_neon_simd.rs  transformer.rs  voice_model.rs
src/IA/src/security/: advanced_security.rs  anomaly_detector.rs  crypto_core.rs  mod.rs  privacy_mode.rs  safe_ai.rs  system_integrity.rs  tls_client.rs  tls_integration.rs
src/IA/src/security/loop/: external_loop.rs  feedback_loop.rs  loop_manager.rs  mod.rs  (+6 more)
src/IA/src/tasks/: compression_rs_task.rs  cryptography_task.rs  data_streaming_task.rs  database_engine_task.rs  indexing_task.rs  memory_analysis_task.rs  mod.rs  network_stack_task.rs  parallel_pipeline_task.rs  protocol_validation_task.rs  rust_ml_inference_task.rs  safety_validation_task.rs  search_engine_task.rs  security_audit_task.rs  static_analysis_task.rs  vector_search_task.rs  wasm_compilation_task.rs  webassembly_transpiler_task.rs  zero_copy_parsing_task.rs
src/IA/src/tests/: integration_tests.rs
src/IA/src/time/: hal.rs  mod.rs
src/IA/src/utils/: adaptability.rs  advanced_memory.rs  concurrency.rs  debug_writer.rs  error.rs  file_ops.rs  health_monitoring.rs  logger.rs  metrics.rs  mod.rs  observability.rs  string_ops.rs  test_runtime.rs  trace_buffer.rs  tracing.rs
src/IA/tests/: adaptive_scheduler.rs  context_store_purge.rs  integration_critical.rs  ipc_contracts.rs  ipc_contracts_more.rs  ipc_fuzz.rs  ipc_invariants.rs  ipc_retry_backpressure.rs  ipc_router_security.rs  ipc_security.rs  model_cache_eviction.rs  model_cache_warm.rs  offline_pretraining.rs  offline_pretraining_accuracy.rs  parsing_integration.rs  quota_load.rs  realtime_stress.rs  recovery_limits.rs  resource_quota.rs  resource_quota_ema.rs  resource_quota_load.rs  resource_quota_priority.rs  safe_ai_escalation.rs  safe_ai_recovery.rs  sandbox_audit.rs  test_guard.rs  timekeeper.rs  timekeeper_batch.rs  timekeeper_sync.rs  tls_adapter.rs
src/hardware/: Cargo.toml
src/hardware/src/audio/: audio_input_control.rs  headphone_jack.rs  mod.rs  noise_cancellation.rs
src/hardware/src/biometric/: faceid.rs  fingerprint.rs  iris.rs
src/hardware/src/camera/: flash.rs  mod.rs  zoom.rs
src/hardware/src/config/: hardware_pool.rs  mod.rs
src/hardware/src/cpu/: cpu_cache.rs  cpu_cores.rs  cpu_frequency.rs  cpu_power.rs  cpu_security.rs
src/hardware/src/device_interfaces/: i2c.rs  mod.rs  pci.rs  spi.rs
src/hardware/src/display/: adaptive_refresh.rs  framebuffer.rs
src/hardware/src/gps/: geofencing.rs  gps.rs  mod.rs
src/hardware/src/gpu/: gpu_command.rs  gpu_frequency.rs  gpu_power.rs  gpu_security.rs  mali.rs  mod.rs  screen.rs  thermal_scaling.rs
src/hardware/src/haptics/: linear_actuator.rs  mod.rs  vibrator.rs
src/hardware/src/misc/: environmental_sensor.rs  fan.rs  gps_compass.rs  ir_sensor.rs  led.rs  mod.rs  vibration_motor.rs
src/hardware/src/modem/: bluetooth.rs  esim.rs  fiveg.rs  thread.rs  wifi.rs  zigbee.rs
src/hardware/src/nfc/: reader.rs
src/hardware/src/ram/: mod.rs  ram_refresh.rs  ram_registrers.rs  ram_security.rs  ram_timing.rs
src/hardware/src/security/: anti_tamper.rs  cpu_security.rs  encryption_module.rs  intrusion_detection.rs  iommu.rs  key_storage.rs  mod.rs  secure_boot.rs  secure_element.rs  trusted_execution.rs
src/hardware/src/sensors/: barometer.rs
src/hardware/srcr/audio/: audio_codec.rs
src/hardware/tests/: audio_tests.rs  biometric_tests.rs  camera_tests.rs  common.rs  cpu_tests.rs  degradation_and_recovery_tests.rs  dependency_graph_tests.rs  device_interfaces_tests.rs  display_tests.rs  gps_tests.rs  gpu_tests.rs  haptics_tests.rs  hardware_driver_tests.rs  hardware_manager_integration_tests.rs  hardware_simulator.rs  misc_tests.rs  modem_tests.rs  nfc_tests.rs  power_tests.rs  ram_tests.rs  security_tests.rs  sensors_tests.rs  storage_tests.rs  thermal_tests.rs
src/kernel/: Cargo.toml  build.rs
src/kernel/src/: lib.rs  run.rs
src/kernel/src/config/: loader.rs  mod.rs  types.rs
src/kernel/src/core/: async_io.rs  interrupt_handler.rs  irq_fiq.rs  mod.rs  multicore.rs  multicore_advanced.rs
src/kernel/src/crypto/: hash.rs  key_management.rs  mod.rs  run.rs  secure_keys.rs  storage_crypto.rs  tls_integration.rs
src/kernel/src/identity/: auth.rs  ephemeral_id.rs  local_id.rs  mod.rs
src/kernel/src/permissions/: access_control.rs  mod.rs  policy.rs
src/kernel/src/rust_abstractions/: concurrency.rs  ipc.rs  memory.rs  mod.rs  scheduler.rs  task.rs  threads.rs
src/kernel/src/scheduler/: edf.rs  edf_fast.rs  mod.rs  preemption.rs  preemption_advanced.rs
src/kernel/src/security/: anti_tamper.rs  integrity.rs  mod.rs  secure_boot.rs  secure_element.rs  trusted_execution.rs  truster_execution.rs  verified_boot.rs
src/kernel/src/services/: hardware_bridge.rs  mod.rs
src/kernel/src/sync/: bare_metal.rs  improved.rs  mod.rs
src/kernel/tests/: crypto_tests.rs  identity_tests.rs  ipc_tests.rs  security_tests.rs  stress_tests.rs  tls_tests.rs
(+218 files in other folders)
