[package]
name = "redmi-ia"
version = "2.0.0"
edition = "2021"
description = "Advanced AI/ML Engine for Redmi OS - Deep Learning, Code Analysis, Self-Learning"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "redmi-ia"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
log = { version = "0.4", default-features = false }

# ML & Mathematics (no_std compatible versions)
ndarray = { version = "0.15", default-features = false, features = ["serde"] }
ndarray-stats = { version = "0.5", default-features = false }
ndarray-rand = { version = "0.15", default-features = false }
nalgebra = { version = "0.32", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2", default-features = false }

# Performance (no_std compatible)
parking_lot = { version = "0.12", default-features = false }
lru = { version = "0.12", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }

# Cryptography (for ML model security)
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }
libm = "0.2"
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
chacha20 = { version = "0.9", default-features = false }

# Security & validation
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
hmac = { version = "0.12", default-features = false }
rand = { version = "0.8", default-features = false, features = ["alloc"] }

# Serialization
bincode = "1.3"

# Text processing (for code analysis)
nom = { version = "7.1", default-features = false, features = ["alloc"] }

# Error handling
thiserror = "1.0"

# no_std specific helpers
wee_alloc = "0.4"
spin = "0.9"

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"
test-case = "3.3"
ctor = "0.2"

[build-dependencies]
sha2 = { version = "0.10" }

[features]
deep_learning = []
code_analysis = []
self_learning = []
security_analysis = []
general_ai = []
full = ["deep_learning", "code_analysis", "self_learning", "security_analysis", "general_ai"]
optimized = ["deep_learning", "code_analysis"]
ml_full = []
std = []
offline_pretraining = []
hw_timer = []
real_tls = []
capture_module_ipc = []
default = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

[profile.dev]
panic = "abort"

[profile.bench]
opt-level = 3
lto = true

