[package]
name = "redmi-tls"
version = "1.0.0"
edition = "2021"
description = "TLS implementation with 5-loop architecture"
license = "MIT"
build = "build.rs"

[lib]
name = "redmi_tls"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
anyhow = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
log = { version = "0.4", default-features = false }
serde_yaml = { version = "0.9", default-features = false }
parking_lot = { version = "0.12", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, features = [] }
ring = { version = "0.17", default-features = false }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
secrecy = { version = "0.8", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
rustls = { version = "0.21", optional = true, default-features = false }
rustls-pemfile = { version = "1.0", optional = true, default-features = false }
chacha20poly1305 = { version = "0.10", features = ["alloc"], default-features = false }
subtle = { version = "2.4", default-features = false }
hkdf = { version = "0.12", default-features = false }
zeroize = { version = "1.5", default-features = false, features = ["derive", "alloc"] }
x509-parser = { version = "0.14", default-features = false }
cryptoki = { version = "0.6", optional = true, default-features = false }
hmac = { version = "0.12", default-features = false }
libc = { version = "0.2", default-features = false }

[dev-dependencies]
criterion = "0.5"
rcgen = "0.9"
tempfile = "3.5"
rustls-pemfile = "1.0"
rand = { version = "0.8", features = ["std", "std_rng"] }

[[bench]]
name = "component_token_benches"
harness = false

[features]
default = ["kernel_bare_metal"]
real_tls = ["rustls", "rustls-pemfile"]
hsm = ["cryptoki"]
kernel_bare_metal = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[build-dependencies]
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
